# bpmncheck

./: Cargo.toml  README.md
src/: lib.rs
src/model/: activity.rs  diagram.rs  event.rs  flow.rs  gateway.rs  id.rs  mod.rs
src/parser/: bpmn.rs  elements.rs  error.rs  grammar.rs  mod.rs  process.rs  util.rs
src/petri/: bpmn_to_petri.rs  error.rs  initial_marking.rs  mod.rs  nesting.rs  subprocess.rs
src/viz/: bpmn_viz.rs  mod.rs
src/wellformedness/: check.rs  error.rs  mod.rs
tests/: parser_tests.rs  semantic_manual_tests.rs  semantic_traces_trie_tests.rs  test_to_petri.rs  well_formedness_tests.rs
tests/common/: ctl_from_traces_existential.rs  mod.rs
tests/files/: exception_simple.bpmn  gate.bpmn  gate_to_gate_edge.bpmn  participants.bpmn  participants_and_gates.bpmn
tests/files/basic/: data.bpmn  gate.bpmn  participants_and_data.bpmn
